--- a/src/styles/core.scss
+++ b/src/styles/core.scss
@@ -51,6 +51,10 @@
         margin-bottom: 35px;
     }
 
+    &.coffee-divider-mb41 {
+        margin-bottom: 41px;
+    }
+
     &.white {
         &::before, &::after {
             background-color: #fff;
@@ -68,4 +72,11 @@
             fill: #000;
         }
     }
+}
+
+.coffee-title {
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 1.45;
+    color: #000000;
 }
